# OpAgent

./: .gitattributes  .gitignore  Cargo.toml  README.md  foo.txt
.github/: dependabot.yml
.github/workflows/: release.yml  rust.yml  vardump.yml
installer/: create installer.cmd  installer.msi  installer.wxs
installer/assets/: jikwaa-task.xml
src/: main.rs
