[package]
name = "op_agent"
version = "0.7.0"
authors = ["jikwaa"]
edition = "2018"
build = "build.rs"
publish = false

[package.metadata.winres]
OriginalFilename = "OP Agent.exe"
LegalCopyright = "Copyright © 2020"
FileDescription = "jikwaa Inventory Agent"
CompanyName = "jikwaa"

[dependencies]
winreg = "0.7.0"
serde = { version = "1.0.114", features = ["derive"] } 
serde_json = "1.0.56" 
attohttpc = { version = "0.17.0", features = ["json"] }
bitness = "0.3.3"

[build-dependencies]
winres = "0.1"
