[package]
name = "op_agent"
version = "0.7.2"
authors = ["jikwaa"]
edition = "2021"
build = "build.rs"
publish = false

[package.metadata.winres]
OriginalFilename = "Jikwaa Agent.exe"
LegalCopyright = "Copyright © 2022"
FileDescription = "jikwaa Inventory Agent"
CompanyName = "jikwaa"

[dependencies]
winreg = "0.10.1"
serde = { version = "1.0.114", features = ["derive"] } 
serde_json = "1.0.56" 
attohttpc = { version = "0.19.0", features = ["json"] }
bitness = "0.4.0"
static_vcruntime = "2.0"

[build-dependencies]
winres = "0.1"
